// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Utdanningsnivå
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      checked
      id="<removed>"
      name="my-controlled"
      type="checkbox"
      value="barnehage"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Barnehage
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-controlled"
      type="checkbox"
      value="grunnskole"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Grunnskole
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      checked
      id="<removed>"
      name="my-controlled"
      type="checkbox"
      value="videregaende"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Videregående
    </label>
  </ds-field>
</fieldset>
<p
  data-field="validation"
  hidden
  id="<removed>"
>
</p>
<hr aria-hidden="true">
<p data-variant="default">
  (Annet innhold)
</p>
<hr aria-hidden="true">
<div style="display: flex; gap: var(--ds-size-2);">
  <p data-variant="default">
    Viser innhold for:
  </p>
  <button
    aria-label="Slett Barnehage"
    data-removable="true"
    type="button"
  >
    Barnehage
  </button>
  <button
    aria-label="Slett Videregående"
    data-removable="true"
    type="button"
  >
    Videregående
  </button>
</div>
<button
  data-variant="secondary"
  style="width: fit-content;"
  type="button"
>
  Tøm filtre
</button>
`;

exports[`Default 1`] = `
<fieldset>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      checked
      id="<removed>"
      name="_r_2_"
      type="checkbox"
      value="epost"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="_r_2_"
      type="checkbox"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="_r_2_"
      type="checkbox"
      value="sms"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Disabled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      checked
      disabled
      id="<removed>"
      name="my-disabled"
      type="checkbox"
      value="epost"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      id="<removed>"
      name="my-disabled"
      type="checkbox"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      disabled
      id="<removed>"
      name="my-disabled"
      type="checkbox"
      value="sms"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      checked
      id="<removed>"
      name="my-group"
      type="checkbox"
      value="epost"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="checkbox"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-group"
      type="checkbox"
      value="sms"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`Indeterminate In Table 1`] = `
<table>
  <colgroup>
    <col style="width: 1px;">
    <col style="width: 10em;">
    <col>
  </colgroup>
  <thead>
    <tr>
      <th>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Velg alle"
            id="<removed>"
            name="utilities-usecheckboxgroup--indeterminate-in-table"
            type="checkbox"
            value="all"
          >
        </ds-field>
      </th>
      <th>
        Navn
      </th>
      <th>
        Utdanningsnivå
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-labelledby="<removed>"
            id="<removed>"
            name="utilities-usecheckboxgroup--indeterminate-in-table"
            type="checkbox"
            value="1"
          >
        </ds-field>
      </td>
      <td id="<removed>">
        Lise Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-labelledby="<removed>"
            checked
            id="<removed>"
            name="utilities-usecheckboxgroup--indeterminate-in-table"
            type="checkbox"
            value="2"
          >
        </ds-field>
      </td>
      <td id="<removed>">
        Ola Nordmann
      </td>
      <td>
        Grunnskole
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-labelledby="<removed>"
            checked
            id="<removed>"
            name="utilities-usecheckboxgroup--indeterminate-in-table"
            type="checkbox"
            value="3"
          >
        </ds-field>
      </td>
      <td id="<removed>">
        Kari Nordmann
      </td>
      <td>
        Videregående
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-labelledby="<removed>"
            id="<removed>"
            name="utilities-usecheckboxgroup--indeterminate-in-table"
            type="checkbox"
            value="4"
          >
        </ds-field>
      </td>
      <td id="<removed>">
        Per Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Read Only 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      checked
      id="<removed>"
      name="my-readonly"
      readonly
      type="checkbox"
      value="epost"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-readonly"
      readonly
      type="checkbox"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      name="my-readonly"
      readonly
      type="checkbox"
      value="sms"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<removed>"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      checked
      id="<removed>"
      name="my-error"
      type="checkbox"
      value="epost"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      id="<removed>"
      name="my-error"
      type="checkbox"
      value="telefon"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="true"
      id="<removed>"
      name="my-error"
      type="checkbox"
      value="sms"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    id="<removed>"
  >
    Du må velge minst to kontaktalternativ
  </p>
</fieldset>
`;
